<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/QR_header"
        android:id="@+id/status_message"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:enabled="false" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sensor_details"
        android:orientation="vertical"
        android:visibility="invisible"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Node Address"
                android:id="@+id/lbl_nodeAddress"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="node_addr"
                android:id="@+id/tv_node_addr"
                android:textSize="20dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Geolocation"
                android:id="@+id/lbl_geolocation"
                android:textSize="20dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Latitude"
                android:id="@+id/lbl_latitude"
                android:textSize="15dp"
                android:layout_below="@+id/lbl_geolocation"
                android:layout_alignParentStart="true"
                android:padding="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Longitude"
                android:id="@+id/lbl_longitude"
                android:textSize="15dp"
                android:layout_below="@+id/lbl_latitude"
                android:layout_alignStart="@+id/lbl_latitude"
                android:padding="5dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/et_latitude"
                android:textSize="15dp"
                android:text="[0000]"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:padding="5dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/et_longitude"
                android:textSize="15dp"
                android:text="[0000]"
                android:layout_alignTop="@+id/lbl_longitude"
                android:layout_alignParentEnd="true"
                android:padding="5dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Status"
                android:id="@+id/lbl_status"
                android:textSize="20dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Deployed"
                android:id="@+id/lbl_deployed"
                android:textSize="15dp"
                android:layout_below="@+id/lbl_status"
                android:layout_alignParentStart="true"
                android:padding="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Timestamp"
                android:id="@+id/lbl_timestamp"
                android:textSize="15dp"
                android:layout_below="@+id/lbl_deployed"
                android:layout_alignStart="@+id/lbl_deployed"
                android:padding="5dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/et_deployed"
                android:textSize="15dp"
                android:text="[yes]"
                android:layout_above="@+id/lbl_timestamp"
                android:layout_alignParentEnd="true"
                android:padding="5dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/et_timestamp"
                android:textSize="15dp"
                android:text="[10121994 asdfsdfa]"
                android:layout_alignBottom="@+id/lbl_timestamp"
                android:layout_alignEnd="@+id/et_deployed"
                android:padding="5dp" />
        </RelativeLayout>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_focus"
            android:id="@+id/auto_focus"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:checked="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_flash"
            android:id="@+id/use_flash"
            android:layout_alignTop="@+id/auto_focus"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:checked="false" />
    </RelativeLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_QR"
        android:id="@+id/read_QR"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept_QR"
        android:id="@+id/accept_QR"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:onClick="confirmQR"
        android:nestedScrollingEnabled="false" />


</LinearLayout>
